@startuml

title __DATABASE's Class Diagram__\n

  namespace database {
    class database.ClientTable {
        {static} - log : Logger
        + delete()
        + insert()
        + selectClientsForGeneral()
        + update()
    }
  }
  

  namespace database {
    class database.Database {
        - source : MysqlDataSource
        + connect()
    }
  }
  

  namespace database {
    class database.InterpretationTestBoykoTable {
        {static} - log : Logger
        + insert()
        + select()
        + update()
    }
  }
  

  namespace database {
    class database.InterpretationTestGAGETable {
        {static} - log : Logger
        + insert()
        + select()
        + update()
    }
  }
  

  namespace database {
    class database.TestBoykoTable {
        {static} - log : Logger
        + delete()
        + insert()
        + selectTestBoyko()
        + update()
    }
  }
  

  namespace database {
    class database.TestGAGETable {
        {static} - log : Logger
        + delete()
        + insert()
        + selectTestGAGE()
        + update()
    }
  }
  

  namespace database {
    class database.TypologicalGroupTable {
        {static} - log : Logger
        + insert()
        + select()
        + update()
    }
  }
  

  namespace database {
    class database.UserTable {
        {static} - log : Logger
        + createNew()
        + deleteUser()
        + getUserList()
        + selectUser()
        + update()
        + updateField()
    }
  }
  

  database.ClientTable -up-|> database.Database
  database.InterpretationTestBoykoTable -up-|> database.Database
  database.InterpretationTestGAGETable -up-|> database.Database
  database.TestBoykoTable -up-|> database.Database
  database.TestGAGETable -up-|> database.Database
  database.TypologicalGroupTable -up-|> database.Database
  database.UserTable -up-|> database.Database


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
